UNISIM Docs: -Fixed an alignment problem
git-svn-id: https://unisim.org/svn/devel@13136 ea533459-3c0a-0410-a024-a90cf4b01ff5

--- a/unisim_docs/www/template/template.css
+++ b/unisim_docs/www/template/template.css
@@ -113,7 +113,7 @@ td.menu-item:hover
 .aside
 {
 	float:right;
-	width:380px;
+	width:384px;
 }
 
 .content
@@ -154,12 +154,12 @@ td.menu-item:hover
 
 .aside .aside-item, .aside .content-item
 {
-	width:380px;
+	width:384px;
 }
 
 .content .aside-item, .content .content-item
 {
-	width:628px;
+	width:640px;
 }
 
 /* separator */
